--- a/PS06.Rmd
+++ b/PS06.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "STAT/MATH 495: Problem Set 06"
-author: "WRITE YOUR NAME HERE"
+author: "Jenn Halbleib"
 date: "2017-10-17"
 output:
   html_document:
@@ -69,7 +69,7 @@ data" function. Random in terms of both:
 generate_sample <- function(f, n, sigma) {
   sample <- data_frame(
     x = runif(n = n, min = 0, max = 1),
-    f_x = f(x),
+    f_x = f(x), #Note: f(x) = x^2 is defined above
     epsilon = rnorm(n = n, mean = 0, sd = sigma),
     y = f_x + epsilon
   )
